Fix charts in dark mode
Fixes #1412

--- a/app/javascript/stylesheets/colors.css
+++ b/app/javascript/stylesheets/colors.css
@@ -33,6 +33,9 @@
   --alert-background-color: #FFFFCC;
   --alert-border-color: #FFEB3B;
   --alert-text-color: black;
+
+  --chart-background-color: #dcdcdc;
+  --chart-border-color: rgb(220,220,220)
 }
 
 @media (prefers-color-scheme: dark) {
